Fix #25 Use textContrastClass to switch between white and black font color depending on the color of the tag and amend the style of the sub heading with filter brightness for different color contrast

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -244,7 +244,6 @@
 // Systems
 .TagCategory {
   list-style: none;
-  color: @categories-color-white;
 
   .TagCategory-content {
     padding: 15px 20px;
@@ -253,7 +252,6 @@
     justify-content: space-between;
     background-color: @primary-color;
     text-decoration: none !important;
-    color: @categories-color-highlighted;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.18),
       0 3px 10px 0 rgba(0, 0, 0, 0.15);
 
@@ -302,7 +300,6 @@
 
       .TagCategory-description {
         margin-top: 0.5em;
-        color: @categories-color-muted;
         overflow-wrap: break-word;
       }
     }
@@ -324,16 +321,11 @@
 
 .TagCategory.SubCategory {
   .TagCategory-content {
-    color: @categories-sub-color-highlighted;
     padding: 10px 20px;
     margin: 5px 0;
     background-color: @categories-sub-color-background;
     box-shadow: 0 2px 4px 0em rgba(0, 0, 0, 0.04),
       0 3px 10px 0 rgba(0, 0, 0, 0.07);
-
-    .TagCategory-main .TagCategory-description {
-      color: @categories-sub-color-muted;
-    }
 
     .TagCategory-name {
       font-size: 18px;
@@ -382,10 +374,6 @@
     .StatWidget-count {
       font-weight: 550;
     }
-
-    .StatWidget-label {
-      color: @categories-color-white-muted;
-    }
   }
 }
 
@@ -393,9 +381,6 @@
   .StatWidget {
     border-right: 2px solid @categories-sub-color-more-muted;
     display: flex;
-  }
-  .StatWidget-label {
-    color: @categories-sub-color-muted;
   }
 }
 
@@ -406,7 +391,6 @@
 .LockedText {
   display: flex;
   align-items: center;
-  color: @categories-color-highlighted;
 
   .LockedText-content,
   .LockedText-topRow,
@@ -414,7 +398,6 @@
     display: flex;
   }
   .LockedText-topRow {
-    color: @categories-color-white;
     font-weight: 550;
   }
 }
@@ -422,7 +405,6 @@
 .LastDiscussion {
   display: flex;
   align-items: center;
-  color: @categories-color-highlighted;
 
   .LastDiscussion-userCardContainer {
     display: block;
@@ -466,41 +448,16 @@
   }
 
   .LastDiscussion-topRow {
-    color: @categories-color-white;
     font-weight: 550;
   }
 
   .LastDiscussion-bottomRow {
-    color: @categories-color-white-muted;
-
     .LastDiscussion-usernameLink,
     .username,
     time {
       display: contents;
     }
 
-    .LastDiscussion-usernameLink {
-      color: @categories-color-white-muted;
-    }
-  }
-}
-
-.TagCategory.SubCategory {
-  .TagCategory-lastDiscussion.empty {
-    .LastDiscussion {
-      color: @categories-sub-color-highlighted;
-    }
-  }
-  .LastDiscussion {
-    .LastDiscussion-topRow {
-      color: @categories-sub-color-highlighted;
-    }
-    .LastDiscussion-bottomRow {
-      color: @categories-sub-color-muted;
-      .LastDiscussion-usernameLink {
-        color: @categories-sub-color-muted;
-      }
-    }
   }
 }
 
